workloads-load-tests/product-0/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: product-0
  labels:
    pkz.test: "true"
    pkz.product: product-0
