workloads-load-tests/product-0/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: product-0
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
        pkz.test: "true"
    spec:
      containers:
        - name: app
          image: nginx:1.25
          ports:
            - containerPort: 80
