workloads-load-tests/product-0/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: product-0
spec:
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 80
